# raytracer

./: .clang-tidy  .clangd  .gitignore  .prettierrc  CMakeLists.txt  README.txt  Session.vim  bbs_build.sh  bbs_dummy_one.sh  bbs_encode.sh  bbs_test_env.sh  biome.json  gradle.properties  jsconfig.json  package-lock.json  package.json  settings.gradle.kts  tsconfig.json  unused_.prettierrc
app/: geometry.js  index.html  main.js  shaders.js
app/algebra/: common.js  mtrx2.js  mtrx3.js  mtrx4.js  qtnn.js  vec2.js  vec3.js  vec4.js
cmd/: server.go
dummy_one/: build.gradle.kts
dummy_one/src/main/kotlin/dummy_one/: Main.kt
encode/: build.gradle.kts
encode/src/main/kotlin/: Main.kt
modules/: build.gradle.kts
modules/src/main/kotlin/algebra/: Matrix2.kt  Matrix3.kt  (+4 more)
rt/: go.mod
rt/image/: canvas.cpp  canvas.h  color.cpp  film.cpp  image.cpp  interface.cpp  tga.cpp
rt/network/: network.cpp  server.cpp
rt/websocket/: server.cpp  websocket.cpp
server/: go.mod  server.js  server.ts
server/cmd/: server.go
server/mesh/: mesh.ts
test/: CMakeLists.txt
test/image/: image.cpp
test_one/: build.gradle.kts
tire/: build.gradle.kts  context.js  index.html  main.js
tire/algebra/: mtrx2.js  mtrx4.js  vec3.js
tire/js/: main.js
tire/js/algebra/: algebra.js  common.js  mtrx3.js  mtrx4.js  qtnn.js  vec2.js  vec3.js  vec4.js
tire/js/render/: context.js  geometry.js  shaders.js
tire/render/: context.js  render.js
tire/src/: context.ts  main.ts
tire/src/algebra/: mtrx4.ts
tire/src/main/kotlin/: Main.kt
tire/src/render/: render.ts  shaders.ts
(+9 files in other folders)
